# ros2_mavros

./: LICENSE  package.xml  setup.py
config/geometric_controller/: geometric_controller.yaml  geometric_mavros.yaml
config/kf/: kf_param.yaml
config/mavros/: x500_px4_config.yaml  x500_px4_pluginlists.yaml
config/px4/: 4020_gz_x500_d435  4021_gz_x3_uav  CMakeLists.txt
launch/: gt_x500_tf.launch.py  gz_sim.launch.py  mavros.launch.py  random_trajectories.launch.py  x500.launch.py
px4_offboard_control/: arm.py  arm_takeoff.py  circular_traj.py  offboard_control.py  trajectories.py
ros2_mavros/: offboard_control.py  offboard_traj.py  takeoff.py
rviz/: sim.rviz
